--- a/home.html
+++ b/home.html
@@ -81,22 +81,33 @@ li.dropdown {
       <br>
       <h3 style="text-align: left">CV<img  src="https://scontent.fskp4-2.fna.fbcdn.net/v/t31.0-8/30946355_1864287066928907_2217386148257113868_o.jpg?_nc_cat=110&ccb=2&_nc_sid=174925&_nc_ohc=H8aSc6ROHdsAX9qj4DO&_nc_ht=scontent.fskp4-2.fna&oh=fcad5ac9b023ccc0dfa64cacf33e8d46&oe=5FBD21C0" alt="girl" style="float: right; width: 214px; height: 300px;padding: 0 820px 0px 0;">
       </h3>
-     <p style="font-size: 14pt;text-align: left;">Name:Hristina<br>Surname:Cvetanoska<br>Phone number:072 273 105 <br> Date of birth: 24.01.2000<br>Place of birth:Bitola<br>Email:hristina2401@yahoo.com<br></p>
-     <p>
-         <strong>
-            <i>Eduacation: </i>
-            FEIT,<em>SS.Cyril and Methodius University</em>-SKOPJE
-        </strong>
-     </p>
-     <br><br><br><br>
-     <br>
+     <p style="font-size: 14pt;text-align: left;">Name:Hristina<br>Surname:Cvetanoska<br>Phone number:072 273 105 <br> Date of birth: 24.01.2000<br>Place of birth:Bitola<br>
+      Email:hristina2401@yahoo.com</p><br><br><br><br><br>
+     <p style="font-style: italic;font-weight: bold;font-size:  16pt;">Education:</p>
+     <ol style="list-style-type:circle;">
+     <li style="font-weight: lighter;font-style: normal;font-size: 14pt;">Faculty of 
+      Electrical Engineering and Information Technologies (FEEIT) at SS.Cyril and Methodius University &emsp;&emsp;&emsp;&emsp;&emsp;(2018-)<br>
+      Third year of the study program Computer Technologies and Engineering
+  </ol> <br clear="all"/>
+  <p style="font-style: italic;font-weight: bold;font-size:  16pt;">Foreign languages:</p>
+  <ol style="list-style-type:circle;">
+    <li style="font-weight: lighter;font-style: normal;font-size: 14pt;">English</li><br clear="all"/>
+    <li style="font-weight: lighter;font-style: normal;font-size: 14pt;">German</li><br>
+  </ol>
+  <br clear="all"/>
+  <p style="font-style: italic;font-weight: bold;font-size:  16pt;">Hoby:</p>
+  <ol style="list-style-type:circle;">
+    <li style="font-weight: lighter;font-style: normal;font-size: 14pt;">Listening to music</li><br clear="all"/>
+    <li style="font-weight: lighter;font-style: normal;font-size: 14pt;">Reading</li><br clear="all"/>
+    <li style="font-weight: lighter;font-style: normal;font-size: 14pt;">Cycling</li><br clear="all"/>
+  </ol>
      <p style="text-align: center;font-size: 16pt;"><b><em>About me</em></b><br></p>
      <p style="font-size: 14pt;text-indent: 50px;">I am person who is positive about every aspect of life.
         My friends say that I am a very funny and an interesting girl with a good sense of humor.
         I believe that friendship is one of the most important values in human life. We exchange new ideas,
         find many interesting things about each other and experience new things.
         I appreciate friendship and people who surround me.I am able to handle multiple tasks on a daily basis also I use creative approach to problem solve.I can say that I am a responsible and a hard-working student.
-    </p>
+    </p><br>
     </body>
 
 </html>
