--- a/visitor.html
+++ b/visitor.html
@@ -75,48 +75,47 @@ li.dropdown {
               <li><a href="contact.html">Contact</a></li>
             </li>
           </ul>
+          <!--1 prasanje-->
           <h3>I would like to know your opinions about my website</h3>
           <p>Is this the first time you have visited our site?</p>
-          <form>
+          <form action="#" method="POST">
             <input type="radio" id="yes" name="opinion1" value="yes">
             <label for="yes">Yes</label><br>
             <input type="radio" id="not bad" name="opinion1" value="no">
             <label for="no">No</label><br>
             <input type="radio" id="not sure" name="opinion1" value="not sure">
-            <label for="not sure">Note sure</label>
-          </form> 
-          <form action="/action_page.php">
+            <label for="not sure">Note sure</label><br>
             <input type="submit" value="submit">
-          </form>
+          </form> 
           <br>
+          <!--2 prasanje-->
           <p>Are you</p>
-          <form>
+          <form action="#" method="POST">
             <input type="radio" id="male" name="gender" value="male">
             <label for="male">Male</label><br>
             <input type="radio" id="female" name="gender" value="female">
             <label for="female">Female</label><br>
             <input type="radio" id="other" name="gender" value="other">
-            <label for="other">Other</label>
-          </form><br>
-          <form action="/action_page.php">
+            <label for="other">Other</label><br>
             <input type="submit" value="submit">
-          </form><br>
-          <form>
+          </form><br><br>
+          <!--3-->
+          <form action="#" method="POST">
             <label for="age">What is your age?</label><br>
             <input type="text" id="age" name="age"><br>
-          </form>
-          <form action="/action_page.php">
             <input type="submit" value="submit">
-          </form><br>
+          </form>
+          <!--4-->
           <p>Please tell us about yourself</p>
+          <form action="#" method="POST">
           <textarea id="review" name="review" rows="7" cols="50">
             Write your text here...
           </textarea>
-          <form action="/action_page.php">
             <input type="submit" value="submit">
           </form><br>
+          <!--5-->
           <p>How often do you vist my site?</p>
-          <form>
+          <form action="#" method="POST">
             <input type="radio" id="daily" name="visit" value="daily">
             <label for="daily">Daily</label><br>
             <input type="radio" id="times" name="visit" value="times">
@@ -131,9 +130,14 @@ li.dropdown {
             <label for="notsure">Not sure</label><br>
             <input type="radio" id="other" name="visit" value="other">
             <label for="other">Other</label><br>
-          </form><br> 
-          <form action="/action_page.php">
             <input type="submit" value="submit">
+          </form><br>
+
+          <p>Do you like my site?</p>
+          <form action="#" method="POST">
+            <label for="rank">Rank(bewtween 1 and 5):</label>
+            <input type="range" id="rank" name="rank" min="1" max ="5">
+            <input type="submit">
           </form>
           <h3>Thank you for your feedback.</h3>
     </body>
