--- a/fastfood.html
+++ b/fastfood.html
@@ -99,8 +99,8 @@ div.desc {
           <div class="dropdown" style="float:right;">
             <button class="dropbtn" style="background: purple;font-weight: bold"><em>Types of food</em></button>
             <div class="dropdown-content" style="right:0;">
-            <a href="#">Healthy eating</a>
-            <a href="#">Fast Food</a>
+            <a href="healtyeating.html">Healthy eating</a>
+            <a href="fastfood.html">Fast Food</a>
             </div>
           </div>
 
