--- a/home.html
+++ b/home.html
@@ -95,7 +95,7 @@ li.dropdown {
     <li style="font-weight: lighter;font-style: normal;font-size: 14pt;">German</li><br>
   </ol>
   <br clear="all"/>
-  <p style="font-style: italic;font-weight: bold;font-size:  16pt;">Hoby:</p>
+  <p style="font-style: italic;font-weight: bold;font-size:  16pt;">Hobby:</p>
   <ol style="list-style-type:circle;">
     <li style="font-weight: lighter;font-style: normal;font-size: 14pt;">Listening to music</li><br clear="all"/>
     <li style="font-weight: lighter;font-style: normal;font-size: 14pt;">Reading</li><br clear="all"/>
