--- a/gallery.html
+++ b/gallery.html
@@ -177,7 +177,7 @@ div.desc {
             <a target="_blank">
               <img src="https://www.wallpaperup.com/uploads/wallpapers/2012/02/09/1065/3861804a49f2dd265802b293b7911680-700.jpg" alt="Forest" width="600" height="400">
             </a>
-            <div class="desc">Paris<br>Comments:</div>
+            <div class="desc">Moscow<br>Comments:</div>
             <form action="/action_page.php" method="POST">
             <textarea id="review" name="review" rows="7" cols="30">Write your comment here...
             </textarea>
