--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,7 @@ li.dropdown {
              Ohrid and surroundings have more to offer than these tours and one day is probably not enough for you!
              Tired of all the walking and sightseeing? Lake Ohrid has quite some nice beaches!<br><br>They say Ohrid used to have 365 churches, one for each day of the year. Nowadays, there are still a lot of churches. The most famous one is St Jovan,
              on a magnificent location on the cliffs overseeing Lake Ohrid. The Cathedral of St Sofia often hosts concerts during the Ohrid Summer Festival .  </p>
-          <form action="/action_page.php">
+          <form action="#">
             <label for="fname">Text title</label><br>
             <input type="text" id="fname" name="fname" value="">
             <br>
@@ -92,7 +92,7 @@ li.dropdown {
           <textarea id="review" name="review" rows="7" cols="50">Write your text here...
           </textarea>
           <br><br>
-          <form action="/action_page.php">
+          <form action="#">
             <label for="date">Date:</label>
             <input type="date" id="date" name="date">
             <input type="submit" value="submit">
