--- a/visitor.html
+++ b/visitor.html
@@ -6,8 +6,9 @@
         <link rel="stylesheet" href="./style.css"/>
         <style>
             body{
-                background-color: lavender;
+                background-image: url("https://wallpapercave.com/wp/uL7Kf9S.jpg");
                 background-size: cover;
+                color: white;
             }
             div.margini {
               margin-left: 150px;
@@ -115,12 +116,12 @@ li.dropdown {
           <!--3-->
           <form action="#" method="POST">
             <label for="age">What is your age?</label><br>
-            <input type="text" id="age" name="age"><br>
+            <input type="text" id="age" name="age" style="opacity: 0.8;"><br>
           </form>
           <!--4-->
           <p>Please tell us about yourself</p>
           <form action="#" method="POST">
-          <textarea id="review" name="review" rows="7" cols="50" placeholder="Write your text here..."></textarea>
+          <textarea id="review" name="review" rows="7" cols="50" placeholder="Write your text here..." style="opacity: 0.8;"></textarea>
           </form><br>
           <!--5-->
           <p>How often do you vist my site?</p>
