--- a/home.html
+++ b/home.html
@@ -7,7 +7,8 @@
 <link rel="stylesheet" href="./style.css"/>
 <style>
 body{
-                background-color: lavender;
+                background-color: rgb(252, 237, 239);
+                opacity: 0.9;
                 background-size: cover;
             }
 
